src/xaglParser.py
# Generated from xagl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class xaglParser ( Parser ):

    grammarFileName = "xagl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'refresh'", "'after'", "'move'", 
                     "'by'", "'to'", "'.'", "'='", "'for'", "'in'", "'..'", 
                     "'do'", "'{'", "'}'", "'while'", "'('", "')'", "'if'", 
                     "'else'", "'+'", "'-'", "'%'", "'*'", "'/'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'ms'", "'s'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Number", "String", "ID", 
                      "Boolean", "COMMENT", "MLCOMMENT", "WS", "NL" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_functions = 2
    RULE_assignment = 3
    RULE_instantiation = 4
    RULE_for_loop = 5
    RULE_while_loop = 6
    RULE_if_stat = 7
    RULE_expr = 8
    RULE_time = 9
    RULE_point = 10
    RULE_vector = 11

    ruleNames =  [ "program", "stat", "functions", "assignment", "instantiation", 
                   "for_loop", "while_loop", "if_stat", "expr", "time", 
                   "point", "vector" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    Number=38
    String=39
    ID=40
    Boolean=41
    COMMENT=42
    MLCOMMENT=43
    WS=44
    NL=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(xaglParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatContext,i)


        def getRuleIndex(self):
            return xaglParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = xaglParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                self.state = 24
                self.stat()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(xaglParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functions(self):
            return self.getTypedRuleContext(xaglParser.FunctionsContext,0)


        def assignment(self):
            return self.getTypedRuleContext(xaglParser.AssignmentContext,0)


        def instantiation(self):
            return self.getTypedRuleContext(xaglParser.InstantiationContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(xaglParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(xaglParser.While_loopContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(xaglParser.If_statContext,0)


        def getRuleIndex(self):
            return xaglParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = xaglParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.functions()
                self.state = 33
                self.match(xaglParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.assignment()
                self.state = 36
                self.match(xaglParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.instantiation()
                self.state = 39
                self.match(xaglParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.for_loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.while_loop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 43
                self.if_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_functions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionMoveVectorContext(FunctionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.FunctionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(xaglParser.ID)
            else:
                return self.getToken(xaglParser.ID, i)
        def vector(self):
            return self.getTypedRuleContext(xaglParser.VectorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionMoveVector" ):
                listener.enterFunctionMoveVector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionMoveVector" ):
                listener.exitFunctionMoveVector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionMoveVector" ):
                return visitor.visitFunctionMoveVector(self)
            else:
                return visitor.visitChildren(self)


    class FunctionRefreshTimeContext(FunctionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.FunctionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(xaglParser.ID, 0)
        def time(self):
            return self.getTypedRuleContext(xaglParser.TimeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionRefreshTime" ):
                listener.enterFunctionRefreshTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionRefreshTime" ):
                listener.exitFunctionRefreshTime(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionRefreshTime" ):
                return visitor.visitFunctionRefreshTime(self)
            else:
                return visitor.visitChildren(self)


    class FunctionMovePointContext(FunctionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.FunctionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(xaglParser.ID)
            else:
                return self.getToken(xaglParser.ID, i)
        def point(self):
            return self.getTypedRuleContext(xaglParser.PointContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionMovePoint" ):
                listener.enterFunctionMovePoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionMovePoint" ):
                listener.exitFunctionMovePoint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionMovePoint" ):
                return visitor.visitFunctionMovePoint(self)
            else:
                return visitor.visitChildren(self)



    def functions(self):

        localctx = xaglParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functions)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = xaglParser.FunctionRefreshTimeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(xaglParser.T__1)
                self.state = 47
                self.match(xaglParser.ID)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 48
                    self.match(xaglParser.T__2)
                    self.state = 49
                    self.time()


                pass

            elif la_ == 2:
                localctx = xaglParser.FunctionMoveVectorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(xaglParser.T__3)
                self.state = 53
                self.match(xaglParser.ID)
                self.state = 54
                self.match(xaglParser.T__4)
                self.state = 57
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16]:
                    self.state = 55
                    self.vector()
                    pass
                elif token in [40]:
                    self.state = 56
                    self.match(xaglParser.ID)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                localctx = xaglParser.FunctionMovePointContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.match(xaglParser.T__3)
                self.state = 60
                self.match(xaglParser.ID)
                self.state = 61
                self.match(xaglParser.T__5)
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16]:
                    self.state = 62
                    self.point()
                    pass
                elif token in [40]:
                    self.state = 63
                    self.match(xaglParser.ID)
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssigmentObjectAttributeContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(xaglParser.ID)
            else:
                return self.getToken(xaglParser.ID, i)
        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssigmentObjectAttribute" ):
                listener.enterAssigmentObjectAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssigmentObjectAttribute" ):
                listener.exitAssigmentObjectAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssigmentObjectAttribute" ):
                return visitor.visitAssigmentObjectAttribute(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = xaglParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            localctx = xaglParser.AssigmentObjectAttributeContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(xaglParser.ID)
            self.state = 69
            self.match(xaglParser.T__6)
            self.state = 70
            self.match(xaglParser.ID)
            self.state = 71
            self.match(xaglParser.T__7)
            self.state = 72
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstantiationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_instantiation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class InstantiateObjectContext(InstantiationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.InstantiationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(xaglParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstantiateObject" ):
                listener.enterInstantiateObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstantiateObject" ):
                listener.exitInstantiateObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstantiateObject" ):
                return visitor.visitInstantiateObject(self)
            else:
                return visitor.visitChildren(self)



    def instantiation(self):

        localctx = xaglParser.InstantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instantiation)
        try:
            localctx = xaglParser.InstantiateObjectContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(xaglParser.ID)
            self.state = 75
            self.match(xaglParser.T__7)
            self.state = 76
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_for_loop

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForRangeContext(For_loopContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.For_loopContext
            super().__init__(parser)
            self.from_ = None # ExprContext
            self.to = None # ExprContext
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(xaglParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForRange" ):
                listener.enterForRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForRange" ):
                listener.exitForRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForRange" ):
                return visitor.visitForRange(self)
            else:
                return visitor.visitChildren(self)



    def for_loop(self):

        localctx = xaglParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_for_loop)
        self._la = 0 # Token type
        try:
            localctx = xaglParser.ForRangeContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(xaglParser.T__8)
            self.state = 79
            self.match(xaglParser.ID)
            self.state = 80
            self.match(xaglParser.T__9)
            self.state = 81
            localctx.from_ = self.expr(0)
            self.state = 82
            self.match(xaglParser.T__10)
            self.state = 83
            localctx.to = self.expr(0)
            self.state = 84
            self.match(xaglParser.T__11)
            self.state = 85
            self.match(xaglParser.T__12)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                self.state = 86
                self.stat()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(xaglParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_while_loop

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileLoopContext(While_loopContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.While_loopContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)



    def while_loop(self):

        localctx = xaglParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_while_loop)
        self._la = 0 # Token type
        try:
            localctx = xaglParser.WhileLoopContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(xaglParser.T__14)
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 95
                self.match(xaglParser.T__15)


            self.state = 98
            self.expr(0)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 99
                self.match(xaglParser.T__16)


            self.state = 102
            self.match(xaglParser.T__11)
            self.state = 103
            self.match(xaglParser.T__12)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                self.state = 104
                self.stat()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(xaglParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xaglParser.RULE_if_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfElseStatContext(If_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.If_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseStat" ):
                listener.enterIfElseStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseStat" ):
                listener.exitIfElseStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStat" ):
                return visitor.visitIfElseStat(self)
            else:
                return visitor.visitChildren(self)


    class IfElseIfContext(If_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.If_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)

        def if_stat(self):
            return self.getTypedRuleContext(xaglParser.If_statContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseIf" ):
                listener.enterIfElseIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseIf" ):
                listener.exitIfElseIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseIf" ):
                return visitor.visitIfElseIf(self)
            else:
                return visitor.visitChildren(self)


    class IfStatContext(If_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.If_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(xaglParser.ExprContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.StatContext)
            else:
                return self.getTypedRuleContext(xaglParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)



    def if_stat(self):

        localctx = xaglParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stat)
        self._la = 0 # Token type
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                localctx = xaglParser.IfStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(xaglParser.T__17)
                self.state = 114
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.match(xaglParser.T__15)


                self.state = 116
                self.expr(0)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 117
                    self.match(xaglParser.T__16)


                self.state = 120
                self.match(xaglParser.T__11)
                self.state = 121
                self.match(xaglParser.T__12)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                    self.state = 122
                    self.stat()
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(xaglParser.T__13)
                pass

            elif la_ == 2:
                localctx = xaglParser.IfElseIfContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(xaglParser.T__17)
                self.state = 132
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 131
                    self.match(xaglParser.T__15)


                self.state = 134
                self.expr(0)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 135
                    self.match(xaglParser.T__16)


                self.state = 138
                self.match(xaglParser.T__11)
                self.state = 139
                self.match(xaglParser.T__12)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                    self.state = 140
                    self.stat()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 146
                self.match(xaglParser.T__13)
                self.state = 147
                self.match(xaglParser.T__18)
                self.state = 148
                self.if_stat()
                pass

            elif la_ == 3:
                localctx = xaglParser.IfElseStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(xaglParser.T__17)
                self.state = 152
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 151
                    self.match(xaglParser.T__15)


                self.state = 154
                self.expr(0)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 155
                    self.match(xaglParser.T__16)


                self.state = 158
                self.match(xaglParser.T__11)
                self.state = 159
                self.match(xaglParser.T__12)
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                    self.state = 160
                    self.stat()
                    self.state = 165
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 166
                self.match(xaglParser.T__13)
                self.state = 167
                self.match(xaglParser.T__18)
                self.state = 168
                self.match(xaglParser.T__12)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511923220) != 0):
                    self.state = 169
                    self.stat()
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 175
                self.match(xaglParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varName = None


        def getRuleIndex(self):
            return xaglParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.varName = ctx.varName


    class ExprBooleanANDContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a xaglParser.ExprContext
            super().__init__(parser)
            self.e1 = None # ExprContext
            self.e2 = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xaglParser.ExprContext)
            else:
                return self.getTypedRuleContext(xaglParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBooleanAND" ):
                listener.enterExprBooleanAND(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprBooleanAND" ):
                listener.exitExprBooleanAND(self)
